--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 :root {
     --primary-color: #013047;
     --text-color: #219EBC;
-    --secondary-color: #F6851F;
+    --secondary-color: #4e1ff6;
     --light-bg: #f8f9fa;
     --dark-text: #333;
     --light-text: #fff;
@@ -265,11 +265,11 @@ main {
 }
 
 .hero-image {
-    flex: 1;
+    flex: 0;
 }
 
 .hero-image img {
-    max-width: 105%;
+    max-width: 100%;
 }
 
 /* ====== Courses Section ====== */
@@ -866,4 +866,8 @@ footer {
         align-items: center; /* This centers the cards horizontally */
         padding: 0 1rem;
     }
+}
+body, .container, .footer-grid, .testimonials-grid {
+    direction: ltr;
+    text-align: left;
 }
